--- a/wodev/package.json
+++ b/wodev/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
     "bootstrap": "^4.5.3",
+    "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.13.1",
@@ -41,6 +42,7 @@
   },
   "devDependencies": {
     "jest": "^26.6.0",
+    "jest-styled-components": "^7.0.3",
     "styled-components": "^5.2.1"
   }
 }
