--- a/WoDevServer/WoDevServer/appsettings.json
+++ b/WoDevServer/WoDevServer/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=192.168.1.4\\WODEVSQL;User ID=admin;Password=wodev123!;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
