--- a/WoDevServer/WoDevServer/appsettings.json
+++ b/WoDevServer/WoDevServer/appsettings.json
@@ -1,6 +1,9 @@
 {
+  "AppSettings": {
+    "Secret": "u<<e[2c.g/58&=}<e6;qy5~i<9j8z@&<.<*1j4>)c!q650}iw<yb2)2}@$@b,()t(l1n6v#v{wkj*@}.+m5}dp}`sqz%0#{tc1/-7{+pt?g+k8]?`<~w],8.^ai4}lp,"
+  },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=192.168.1.4\\WODEVSQL;User ID=admin;Password=wodev123!;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "DefaultConnection": "Data Source=host.docker.internal\\WODEVSQL;User ID=admin;Password=wodev123!;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
   "Logging": {
     "LogLevel": {
