Dodanie routingu, zabezpiecznenie dashborad

--- a/WoDevServer/WoDevServer/Properties/launchSettings.json
+++ b/WoDevServer/WoDevServer/Properties/launchSettings.json
@@ -34,7 +34,8 @@
         "DOCKER_HOST_IP": "host.docker.external"
       },
       "publishAllPorts": true,
-      "useSSL": true
+      "useSSL": true,
+      "sslPort": 443
     }
   }
 }
