--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,5 @@ $RECYCLE.BIN/
 
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
 
+obj/
+/WoDevServer/WoDevServer/obj/*
