--- a/wodev/package.json
+++ b/wodev/package.json
@@ -14,6 +14,7 @@
     "moment": "^2.29.1",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
+    "react-datepicker": "^3.4.1",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.13.1",
     "react-router-dom": "^5.2.0",
@@ -23,7 +24,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --verbose=false",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
