--- a/wodev/package.json
+++ b/wodev/package.json
@@ -17,6 +17,9 @@
     "react-datepicker": "^3.4.1",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.13.1",
+    "react-icons": "^4.2.0",
+    "react-lottie": "^1.2.3",
+    "react-refresh": "^0.10.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
