--- a/WoDevServer/WoDevServer/Dockerfile
+++ b/WoDevServer/WoDevServer/Dockerfile
@@ -1,13 +1,16 @@
 #See https://aka.ms/containerfastmode to understand how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
-FROM mcr.microsoft.com/dotnet/aspnet:5.0-buster-slim AS base
+#Depending on the operating system of the host machines(s) that will build or run the containers, the image specified in the FROM statement may need to be changed.
+#For more information, please see https://aka.ms/containercompat
+
+FROM mcr.microsoft.com/dotnet/aspnet:5.0 AS base
 WORKDIR /app
 EXPOSE 80
 EXPOSE 443
 
-FROM mcr.microsoft.com/dotnet/sdk:5.0-buster-slim AS build
+FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build
 WORKDIR /src
-COPY ["WoDevServer/WoDevServer.csproj", "WoDevServer/"]
+COPY ["WoDevServer.csproj", "WoDevServer/"]
 RUN dotnet restore "WoDevServer/WoDevServer.csproj"
 COPY . .
 WORKDIR "/src/WoDevServer"
