--- a/wodev/Dockerfile
+++ b/wodev/Dockerfile
@@ -1,8 +1,8 @@
-FROM node:12.18-alpine
-ENV NODE_ENV=production
+FROM node:14.16.0
+ENV NODE_ENV=development
 WORKDIR /usr/src/app
-COPY ["package.json", "package-lock.json*", "npm-shrinkwrap.json*", "./"]
-RUN npm install --silent && mv node_modules ../
-COPY . .
+COPY ["package.json", "package-lock.json*", "npm-shrinkwrap.json*", "/usr/src/app/"]
+RUN npm --verbose install
+COPY . /usr/src/app/
 EXPOSE 3000
 CMD ["npm", "start"]
