--- a/.gitignore
+++ b/.gitignore
@@ -571,3 +571,8 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/obj
+WodevServer/WodevServer/obj/
+*.cache
+/WoDevServer/WoDevServer/obj/
+/WoDevServer/WoDevServer/obj/
