--- a/wodev/package.json
+++ b/wodev/package.json
@@ -14,8 +14,11 @@
     "moment": "^2.29.1",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
+    "react-avatar": "^3.10.0",
+    "react-bootstrap-dropdown-menu": "^1.1.23",
     "react-datepicker": "^3.4.1",
     "react-dom": "^17.0.1",
+    "react-dropdown-overflow": "^1.7.2",
     "react-hook-form": "^6.13.1",
     "react-icons": "^4.2.0",
     "react-lottie": "^1.2.3",
