--- a/wodev/package.json
+++ b/wodev/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^4.5.3",
     "moment": "^2.29.1",
     "node-sass": "^4.14.1",
+    "styled-components": "^5.2.1",
     "react": "^17.0.1",
     "react-avatar": "^3.10.0",
     "react-bootstrap-dropdown-menu": "^1.1.23",
@@ -53,7 +54,6 @@
   },
   "devDependencies": {
     "jest": "^26.6.0",
-    "jest-styled-components": "^7.0.3",
-    "styled-components": "^5.2.1"
+    "jest-styled-components": "^7.0.3"
   }
 }
