--- a/WoDevServer/WoDevServer/appsettings.Development.json
+++ b/WoDevServer/WoDevServer/appsettings.Development.json
@@ -1,9 +1,21 @@
 {
+  "ConnectionStrings": {
+    "LocalConnection": "Data Source=host.docker.internal\\WODEVSQL;User ID=admin;Password=wodev123!;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "AllowedHosts": "*",
+  "Jwt": {
+    "SecretKey": "u<<e[2c.g/58&=}<e6;qy5~i<9j8z@&<.<*1j4>)c!q650}iw<yb2)2}@$@b,()t(l1n6v#v{wkj*@}.+m5}dp}`sqz%0#{tc1/-7{+pt?g+k8]?`<~w],8.^ai4}lp,",
+    "ExpiryMinutes": 5,
+    "Issuer": "tester"
+  },
+  "redis": {
+    "connectionString": "localhost"
   }
 }
