--- a/wodev/package.json
+++ b/wodev/package.json
@@ -13,7 +13,6 @@
     "bootstrap": "^4.5.3",
     "moment": "^2.29.1",
     "node-sass": "^4.14.1",
-    "styled-components": "^5.2.1",
     "react": "^17.0.1",
     "react-avatar": "^3.10.0",
     "react-bootstrap-dropdown-menu": "^1.1.23",
@@ -26,6 +25,8 @@
     "react-refresh": "^0.10.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-swipeable-views": "^0.14.0",
+    "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
