--- a/wodev/package.json
+++ b/wodev/package.json
@@ -21,10 +21,12 @@
     "react-dropdown-overflow": "^1.7.2",
     "react-hook-form": "^6.13.1",
     "react-icons": "^4.2.0",
+    "react-loading-overlay": "^1.0.1",
     "react-lottie": "^1.2.3",
     "react-refresh": "^0.10.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-spinners": "^0.11.0",
     "react-swipeable-views": "^0.14.0",
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
