--- a/wodev/package.json
+++ b/wodev/package.json
@@ -11,11 +11,14 @@
     "@use-hook/use-cookie": "^0.1.4",
     "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
+    "file-loader": "^6.2.0",
     "moment": "^2.29.1",
     "node-sass": "^4.14.1",
+    "npm": "^7.24.1",
     "react": "^17.0.1",
     "react-avatar": "^3.10.0",
     "react-bootstrap-dropdown-menu": "^1.1.23",
+    "react-date-picker": "^8.3.2",
     "react-datepicker": "^3.4.1",
     "react-dom": "^17.0.1",
     "react-dropdown-overflow": "^1.7.2",
